2014-07-07  Dominique d'Humieres <dominiq@lps.ens.fr>

	* gfortran.dg/list_read_12.f90: Delete the file.
	* gfortran.dg/vect/vect.exp: Use gfortran-dg-runtest instead
	of dg-runtest.

2014-07-06  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/61640
	* gfortran.dg/arrayio_16.f90: New test.

2014-07-06  Marek Polacek  <polacek@redhat.com>

	* g++.dg/ipa/imm-devirt-1.C: Fix regexp in dg-final.
	* g++.dg/ipa/imm-devirt-2.C: Likewise.

2014-07-06  Marek Polacek  <polacek@redhat.com>

	PR c/6940
	* c-c++-common/Wsizeof-pointer-memaccess1.c: Use
	-Wno-sizeof-array-argument.
	* c-c++-common/Wsizeof-pointer-memaccess2.c: Likewise.
	* g++.dg/warn/Wsizeof-pointer-memaccess-1.C: Likewise.
	* gcc.dg/Wsizeof-pointer-memaccess1.c: Likewise.
	* g++.dg/torture/Wsizeof-pointer-memaccess1.C: Likewise.
	* g++.dg/torture/Wsizeof-pointer-memaccess2.C: Likewise.
	* gcc.dg/torture/Wsizeof-pointer-memaccess1.c: Likewise.
	* c-c++-common/sizeof-array-argument.c: New test.
	* gcc.dg/vla-5.c: Add dg-warnings.

2014-07-05  Jan Hubicka   <hubicka@ucw.cz>

	* g++.dg/ipa/devirt-26.C: Update testcase.
	* g++.dg/ipa/imm-devirt-1.C: Update testcase.
	* g++.dg/ipa/imm-devirt-2.C: Update testcase.

2014-07-04  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/coarray/coindexed_3.f90: New.

2014-07-04  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/61654
	* g++.dg/opt/pr61654.C: New test.

	PR tree-optimization/61684
	* gcc.c-torture/compile/pr61684.c: New test.

2014-07-04  Thomas Schwinge  <thomas@codesourcery.com>

	* lib/g++-dg.exp (g++-dg-runtest): Change interface to match
	dg-runtest's.  Adapt all callers.
	* lib/gcc-dg.exp (gcc-dg-runtest): Likewise.
	* lib/gfortran-dg.exp (gfortran-dg-runtest): Likewise.
	* lib/go-dg.exp (go-dg-runtest): Likewise.
	* lib/obj-c++-dg.exp (obj-c++-dg-runtest): Likewise.
	* lib/objc-dg.exp (objc-dg-runtest): Likewise.

2014-07-03  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/61682
	* gcc.c-torture/execute/pr61682.c: New test.
